add clear stock
